# cpp_physics_sim

./: CMakeLists.txt  README.md
cmake/: FindSDL2_gfx.cmake
examples/: ramp.cpp  stress_test.cpp
include/: defines.hpp  simulator.hpp
include/entity/: box.hpp  circle.hpp  control.hpp  edge.hpp  entity.hpp
